--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,10 @@
             "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "assets": [{ "glob": "**/*", "input": "public" }, "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/custom-theme.scss",
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
